[tool.poetry]
name = "net_inspect"
version = "1.4.0"
description = "基于已收集的网络设备信息进行的结构化数据分析框架"
authors = ["Elin <365433079@qq.com>"]
license = "Apache-2.0"  
readme = "README.md" 
repository = "https://github.com/Elinpf/net_inspect"
homepage = "https://github.com/Elinpf/net_inspect"

[tool.poetry.scripts]
net_inspect = "net_inspect.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.4.1"
rich_typer = "^0.1.5"
textfsm = "^1.1.2"
ntc_templates_elinpf = "^3.3.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-datadir = "^1.3.1"
PyYAML = "^6.0"
"ruamel.yaml" = "0.17.21"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
